# python_assignment

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_get_raw_data  README.md  docker-compose.yml  env_template  financial_data.db  get_raw_data.py  main.py  model.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_input.json  sample_output.json  schema.sql  setup.sh  utilities.py
financial/: __init__.py  api.py  application.py  config.py  connection_pool.py  constants.py  crud.py  database.py  helpers.py  input.py  main.py  model.py  models.py  pool.py  requirements.txt  restapi.py  routes.py  run.py  schemas.py  services.py  sync.py  unit_test.py
financial/api/: __init__.py  financial_api.py  health.py  statistics_api.py  version.py
financial/clients/: __init__.py  alphavantage_client.py  interfaces.py
financial/common/: constants.py  json_api.py  logging.py  middleware.py  utility.py
financial/errors/: __init__.py  error_codes.py
financial/extract/: api_wrapper.py  extract.py
financial/models/: __init__.py  interfaces.py  mysql.py
financial/repository/: __init__.py  interfaces.py  mysql.py
financial/schemas/: __init__.py  finance.py  responses.py  statistics.py
financial/services/: __init__.py  financial_service.py  interfaces.py  statistics_service.py
financial/statistics/: model.py
financial/transform/: __init__.py  transform_financial_data.py
financial/validators/: __init__.py
tests/: test_api.py
