[tool.poetry]
name = "python_assignment"
version = "0.1.0"
description = "for CTW"
authors = ["tetsu"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
SQLAlchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
sqlalchemy-pagination = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
